--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "gulp webpack starter",
   "dependencies": {
+    "hover.css": "^2.2.1",
     "jquery": "^3.2.1",
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^4.0.1",
